--- a/source/widget/courseStudycenter/courseStudycenter.css
+++ b/source/widget/courseStudycenter/courseStudycenter.css
@@ -110,9 +110,6 @@
   list-style: none;
   padding: 0;
 }
-.courseList a {
-  color: #333333;
-}
 .courseList .study-report {
   float: left;
 }
@@ -142,6 +139,15 @@
   font-size: 16px;
   line-height: 18px;
   margin-bottom: 8px;
+}
+.courseList .courseList-body .course-title .title-detail {
+  color: #333333;
+}
+.courseList .courseList-body .course-title .course_estimate {
+  color: #333333;
+  font-size: 12px;
+  margin-left: 10px;
+  vertical-align: top;
 }
 .courseList .courseList-body .title-more {
   margin-top: 38px;
@@ -188,7 +194,7 @@
   border-left: 1px solid #eaeaea;
   width: 181px;
   float: right;
-  padding: 5px;
+  padding: 5px 5px;
   position: relative;
 }
 .courseList .courseList-teacher .teacher-main {
@@ -204,24 +210,21 @@
   margin-top: 3px;
 }
 .courseList .courseList-teacher .teacher-main .coach-con p {
-  line-height: 28px;
+  line-height: 22px;
 }
 .courseList .courseList-teacher .teacher-main .coach-con p a {
-  display: inline-block;
-  width: 11px;
-  height: 16px;
-  background: url('img/iphone.png') no-repeat 0 center;
-  margin-right: 10px;
-  margin-top: 4px;
-  float: right;
+  color: #333;
+  font-size: 12px;
 }
 .courseList .courseList-teacher .teacher-main .coach-con p.teacher-coach {
   color: #3bafda;
-  font-size: 16px;
+  font-size: 14px;
+  font-family: "Microsoft YaHei";
 }
 .courseList .courseList-teacher .teacher-main .coach-con p.teacher-majar {
   color: #999;
-  font-size: 16px;
+  font-size: 12px;
+  font-family: "SimSun";
 }
 .courseList .courseList-teacher .teacher-main .coach-con p.relook-course {
   color: #e74c3c;
@@ -229,13 +232,52 @@
 .courseList .courseList-teacher .teacher-main-border {
   border-bottom: 1px dotted #eaeaea;
 }
+.courseList .courseList-teacher .majar-items {
+  position: relative;
+}
+.courseList .courseList-teacher .majar-items ul {
+  overflow: hidden;
+  width: 800px;
+  height: 60px;
+}
 .courseList .courseList-teacher .majar-items ul li {
   overflow: hidden;
+  float: left;
+  width: 158px;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll {
+  position: absolute;
+  right: 44px;
+  bottom: -2px;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll a {
+  outline: none;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll a em {
+  display: inline-block;
+  height: 17px;
+  line-height: 17px;
+  text-align: center;
+  text-indent: -9999em;
+  vertical-align: top;
+  width: 17px;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll a .icon-chevron-left {
+  background: url('img/icon_chevron_left.png') no-repeat 0 0;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll a .icon-chevron-right {
+  background: url('img/icon_chevron_right.png') no-repeat 0 0;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll a.none .icon-chevron-left {
+  background: url('img/icon_chevron_left_none.png') no-repeat 0 0;
+}
+.courseList .courseList-teacher .majar-items .avatar-roll a.none .icon-chevron-right {
+  background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
 }
 .courseList .courseList-teacher .more-service {
   position: absolute;
   left: -80px;
-  top: -6px;
+  top: -3px;
 }
 .courseList .courseList-teacher .more-service h4 {
   color: #333333;
@@ -299,22 +341,48 @@ table tr.alt,
 table tr:nth-of-type(2n) {
   background: #fff;
 }
-.material tr td {
+.material-wrap .material-tab {
+  border-bottom: 1px solid #eaeaea;
+  overflow: hidden;
+  margin-bottom: 22px;
+  margin-left: 0;
+}
+.material-wrap .cant-load {
+  float: right;
+  font-size: 12px;
+  line-height: 30px;
+}
+.material-wrap li {
+  float: left;
+  list-style: none;
+  font-size: 14px;
+  line-height: 30px;
+  padding: 0 15px;
+  cursor: pointer;
+}
+.material-wrap li.current {
+  background: #3bafda;
+  color: #fff;
+  border-radius: 4px 4px 0 0;
+}
+.material-wrap .material tr td {
   border: 1px solid #eaeaea;
   padding: 9px 17px;
 }
-.material tr td p {
+.material-wrap .material tr td p {
   color: #666;
   font-size: 12px;
   line-height: 34px;
+  margin-bottom: 10px;
 }
-.material tr td span {
+.material-wrap .material tr td span {
   color: #999999;
   font-size: 12px;
   margin-left: 10px;
 }
 .load-btn {
-  padding: 9px 22px;
+  padding: 0px 22px;
+  line-height: 33px;
   font-size: 14px;
   background: #37bc9b;
   color: #fff;
@@ -347,90 +415,91 @@ table tr:nth-of-type(2n) {
   line-height: 30px;
   margin-top: 40px;
 }
-.layout-list table,
-.layout-list tr,
-.layout-list th,
-.layout-list thead {
+.courselayout-list table,
+.courselayout-list tr,
+.courselayout-list th,
+.courselayout-list thead {
   margin: 0;
   padding: 0;
 }
-.layout-list ul,
-.layout-list li,
-.layout-list p {
+.courselayout-list ul,
+.courselayout-list li,
+.courselayout-list p {
   margin: 0;
   list-style: none;
   padding: 0;
 }
-.layout-list .courseList-title {
+.courselayout-list .courseList-title {
   border-bottom: 1px solid #eaeaea;
   margin-bottom: 20px;
 }
-.layout-list .courseList-title p {
+.courselayout-list .courseList-title p {
   font-size: 18px;
   font-family: 'Microsoft YaHei';
   line-height: 34px;
 }
-.layout-list .course-table thead {
+.courselayout-list .course-table thead {
   background: #fff;
   line-height: 50px;
   height: 50px;
   border-radius: 4px;
   border: 1px solid #eaeaea;
 }
-.layout-list .course-table thead tr th {
+.courselayout-list .course-table thead tr th {
   font-size: 16px;
 }
-.layout-list .course-table tr {
+.courselayout-list .course-table tr {
   font-size: 14px;
   font-family: "SimSun";
 }
-.layout-list .course-table tr .text-style {
+.courselayout-list .course-table tr .text-style {
   text-align: center;
   font-size: 12px;
 }
-.layout-list .course-table tr .text-style span {
+.courselayout-list .course-table tr .text-style span {
   color: #999;
 }
-.layout-list .course-table tr .studied-end {
+.courselayout-list .course-table tr .studied-end {
   color: #e74c3c;
 }
-.layout-list .course-table tr .yellow-mark {
+.courselayout-list .course-table tr .yellow-mark {
   color: #ffbc3c;
 }
-.layout-list .course-table tr .studied {
+.courselayout-list .course-table tr .studied {
   color: #37bc9b;
 }
-.layout-list .course-table tr .static-gray {
+.courselayout-list .course-table tr .static-gray {
   color: #999999;
 }
-.layout-list .course-table tr .static-red {
+.courselayout-list .course-table tr .static-red {
   color: #e74c3c;
 }
-.layout-list .course-table tr .wait-look {
+.courselayout-list .course-table tr .wait-look {
   color: #3bafda;
 }
-.layout-list .course-table tr td.yellow-mark em {
+.courselayout-list .course-table tr td.yellow-mark em {
   display: inline-block;
   width: 18px;
   height: 18px;
   margin-left: 5px;
 }
-.layout-list .course-table tr td.yellow-mark .mark {
+.courselayout-list .course-table tr td.yellow-mark .mark {
   background: url("img/spam.png") no-repeat right center;
   vertical-align: middle;
 }
-.layout-list .teacher-tab {
+.courselayout-list .teacher-tab {
   border-bottom: 1px solid #3bafda;
   overflow: hidden;
-  margin-bottom: 10px;
+  margin-bottom: 22px;
 }
-.layout-list .teacher-tab li {
+.courselayout-list .teacher-tab li {
   float: left;
   font-size: 14px;
   line-height: 30px;
   padding: 0 15px;
+  cursor: pointer;
 }
-.layout-list .teacher-tab li.current {
+.courselayout-list .teacher-tab li.current {
   background: #3bafda;
   color: #fff;
   border-radius: 4px 4px 0 0;
