--- a/source/widget/myCollect/collect.css
+++ b/source/widget/myCollect/collect.css
@@ -82,21 +82,40 @@
   max-width: 755px;
   overflow: hidden;
 }
-.content-collect .collect-feed .collect-detail .jzh-feed .feed-media-list {
-  margin-top: 10px;
-}
-.content-collect .collect-feed .collect-detail .jzh-feed .feed-media-list .media-item-small {
-  background: #ccc;
-  cursor: url("http://img04.xesimg.com/big.cur"), auto !important;
-  display: inline-block;
+.content-collect .collect-feed .collect-detail .jzh-feed .colect-media {
+  margin-top: 15px;
   overflow: hidden;
+}
+.content-collect .collect-feed .collect-detail .jzh-feed .colect-media .colect-media-small-img {
+  cursor: url("img/big.cur"), auto !important;
+  display: inline-block;
+  float: left;
+  margin-right: 10px;
+  min-width: 36px;
+  position: relative;
   text-align: center;
 }
-.content-collect .collect-feed .collect-detail .jzh-feed .feed-media-list .media-item-small img {
-  max-width: 120px;
-  max-height: 120px;
-  cursor: url("http://img04.xesimg.com/big.cur"), auto !important;
+.content-collect .collect-feed .collect-detail .jzh-feed .colect-media .colect-media-small-img img {
+  width: auto;
+  height: auto;
+  max-width: 200px;
   vertical-align: top;
+}
+.content-collect .collect-feed .collect-detail .jzh-feed .colect-media-expand {
+  border: 1px solid #eaeaea;
+  cursor: url("img/small.cur"), auto !important;
+  overflow: hidden;
+  padding: 10px;
+  position: relative;
+  text-align: center;
+}
+.content-collect .collect-feed .collect-detail .jzh-feed .colect-media-expand .colect-media-big-img {
+  overflow: hidden;
+}
+.content-collect .collect-feed .collect-detail .jzh-feed .colect-media-expand .colect-media-big-img img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
 }
 .content-collect .collect-feed .feed_ieVoice .icoVoiceCon {
   background: #79bd8f;
