--- a/source/widget/glory/glory.less
+++ b/source/widget/glory/glory.less
@@ -7,13 +7,15 @@
 	margin-right: 10px;
 	overflow: hidden;
 	width: 290px;
+	li{
+		margin-bottom: 15px;
+	}
 	.glory-water{
 		padding: 0 9px;
 	}
 	.water-pic {
 		border: 1px solid @borderColor;
 		width: 290px;
-		height: 352px;
 		padding: 9px;
 		img{
 			width: 270px;
@@ -25,6 +27,7 @@
 			line-height: 19px;
 			margin-top: 15px;
 			overflow: hidden;
+			margin-bottom: 5px;
 		}
 	}
 	.water-option {
