--- a/source/widget/courses/courses.css
+++ b/source/widget/courses/courses.css
@@ -118,28 +118,6 @@ li {
 .course-list .ui-avatar .avatar-photo .avatar-roll a.none .icon-chevron-right {
   background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
 }
-.course-list .ui-avatar .avatar-follow {
-  display: inline-block;
-  font-size: 12px;
-  height: 20px;
-  line-height: 20px;
-  padding: 0 2px;
-  width: 50px;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -ms-border-radius: 2px;
-  border-radius: 2px;
-}
-.course-list .ui-avatar .avatar-follow em {
-  font-style: normal;
-}
-.course-list .ui-avatar .avatar-follow.add {
-  background: #ffbc3c;
-  color: #ffffff;
-  cursor: pointer;
-  text-align: center;
-  text-decoration: none;
-}
 .course-list .course-detail {
   float: left;
   overflow: hidden;
@@ -169,16 +147,24 @@ li {
   color: #333;
   font-size: 26px;
   line-height: 34px;
+  float: left;
+}
+.course-list .course-detail .course-icon {
+  width: 21px;
+  height: 34px;
+  display: inline-block;
+  float: left;
+  margin: 0 8px;
 }
 .course-list .course-detail .icon-yverify {
   background: url('img/v.png') no-repeat left center;
-  width: 21px;
-  height: 17px;
-  display: inline-block;
 }
 .course-list .course-detail span.teacher-label {
   font-size: 12px;
   color: #999999;
+  height: 34px;
+  float: left;
+  line-height: 34px;
 }
 .course-list .course-detail .course-title {
   line-height: 18px;
@@ -281,4 +267,87 @@ li {
 }
 .course-test {
   height: 160px;
+}
+.course-list .fresh-course-attention {
+  font-size: 12px;
+}
+.course-list .fresh-course-attention em,
+.course-list .fresh-course-attention i {
+  font-style: normal;
+}
+.course-list .fresh-attention-btn {
+  background: #ffbc3c;
+  border-radius: 2px;
+  color: #fff;
+  line-height: 20px;
+  padding: 0 8px;
+  display: inline-block;
+  font-size: 12px;
+}
+.course-list .fresh-add {
+  font-size: 14px;
+  margin-top: 1px;
+  padding-right: 2px;
+}
+.course-list .fresh-course-attention a.fresh-add-cancel-btn {
+  color: #3bafda;
+}
+.hot-course-list {
+  padding: 10px 0;
+  background: #fcfcfc;
+}
+.hot-course-list .ui-avatar {
+  margin-right: 10px;
+  width: 40px;
+}
+.hot-course-list .ui-avatar .avatar-photo {
+  width: 40px;
+}
+.hot-course-list .ui-avatar .avatar-photo img {
+  width: 40px;
+  height: 40px;
+}
+.hot-course-list .course-detail p {
+  margin: 3px 0;
+  height: 22px;
+}
+.hot-course-list .course-detail .course-teacher {
+  margin-top: 0;
+}
+.hot-course-list .course-detail .course-teacher .ui-username {
+  font-size: 14px;
+  line-height: 22px;
+}
+.hot-course-list .course-detail .course-teacher .course-icon {
+  line-height: 22px;
+  height: 22px;
+}
+.hot-course-list .course-detail .course-teacher .icon-s-yverify {
+  background: url('img/icon-s-yverify.png') no-repeat 0 center;
+}
+.hot-course-list .course-detail .course-teacher .icon-s-redverify {
+  background: url('img/icon-s-redverify.png') no-repeat 0 center;
+}
+.hot-course-list .course-detail .amount-show {
+  margin-bottom: 0;
+}
+.hot-course-list .course-detail .avatar-name .title-detail {
+  margin-right: 18px;
+  font-size: 12px;
+  line-height: 20px;
+  color: #333;
+  float: left;
+}
+.hot-course-list .course-detail .avatar-name .course-static .icon-people {
+  background: url("img/ic_username.png") no-repeat scroll left center;
+  display: inline-block;
+  font-style: normal;
+  height: 20px;
+  line-height: 20px;
+  margin-right: 5px;
+  vertical-align: top;
+  width: 20px;
+}
+.hot-course-list .course-detail .avatar-name .course-static strong {
+  color: #e74c3c;
 }
