--- a/source/widget/personalCenter/css/personalCenter.less
+++ b/source/widget/personalCenter/css/personalCenter.less
@@ -179,25 +179,219 @@
 /* 个人中心center-info end */
 
 /* 个人中心认证 start */
-.center-verify{
+.verify-up-left{
+  width: 106px;
+  height: 30px;
+  margin-left: 14px;
+  margin-top: 20px;
+  border-right:1px solid rgb(217,217,217);
+}
+
+.verify-up-right{
+  width: 135px;
+  height: 27px;
+  line-height: 27px;
+  text-align: center;
+  margin-top: 20px;
+}
+.center-verify-office{
   .center-left;
-  font-size: 12px;
   height: 68px;
+  font-size: 12px;
   .center-office-verify{
     float: left;
-    width: 106px;
-    height: 27px;
-    margin-left: 14px;
-    margin-top: 20px;
+    .verify-up-left;
     background: url("../img/office-verify.png") no-repeat;
-    border-right:1px solid rgb(217,217,217);
   }
   .center-office-desc{
-    width: 135px;
     float: left;
-    height: 27px;
-    text-align: center;
-    margin-top: 25px;
+    .verify-up-right;
   }
 }
 
+.center-verify-teacher{
+  .center-left;
+  height: 145px;
+  font-size: 12px;
+  .center-teacher-verify{
+    .verify-up-left;
+    background: url("../img/teacher-verify.png") no-repeat;
+  }
+  .center-teacher-link{
+    .verify-up-right;
+    width: 130px;
+    color:rgb(117,191,238);
+    background: url("../img/teacher-movie.png") no-repeat 15px 5px;
+  }
+  .center-teacher-desc{
+    width: 260px;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 14px;
+    border-bottom: 1px solid rgb(242,242,245);
+  }
+  .center-teacher-intro{
+    height:54px;
+    line-height:54px;
+    padding-left: 40px;
+    color:rgb(153,153,153);
+    background: url("../img/school.png") no-repeat 15px 15px;
+  }
+}
+.center-verify-stud{
+  .center-left;
+  height: 125px;
+  font-size: 12px;
+  .center-stud-verify{
+    .verify-up-left;
+    background: url("../img/stud-verify.png") no-repeat;
+  }
+  .center-stud-desc{
+    .verify-up-right;
+  }
+  .center-stud-prize{
+    margin-top: 22px;
+    border-top: 1px solid rgb(242,242,245);
+  }
+  .center-stud-prize{
+    height: 52px;
+    img{
+      &:first-child{
+        margin-left: 15px;
+      }
+      width: 28px;
+      height: 30px;
+      margin: 11px 15px 11px 0;
+    }
+  }
+}
+/* 个人中心认证 end */
+
+/* 个人中心访客start */
+.center-visit{
+  .center-left;
+  height: 513px;
+  font-size: 12px;
+  padding-top: 18px;
+  .center-visit-intro{
+    margin-left: 14px;
+    font-size: 16px;
+    color:rgb(176,176,176);
+  }
+  .center-visit-person{
+    display: inline-block;
+    margin: 25px 14px 0;
+    height: 85px;
+    width: 50px;
+    .center-visit-header{
+      width: 40px;
+      height: 40px;
+      margin: 0 5px;
+    }
+    .center-visit-name{
+      margin-top: 6px;
+      text-align: center;
+    }
+    .center-visit-time{
+      margin-top: 6px;
+      color: rgb(153,153,153);
+    }
+  }
+}
+/* 个人中心访客end */
+
+/* 个人中心直播鲜花start */
+.center-rank-left{
+  width: 920px;
+  border-radius: 4px;
+  background-color: #fff;
+  font-size: 12px;
+}
+.center-rank-flower{
+  .center-rank-left;
+  height: 50px;
+  line-height: 50px;
+  color: rgb(153,153,153);
+  padding-left: 15px;
+  padding-right: 15px;
+  span{
+    color: #000;
+    display: inline-block;
+    &:first-child{margin-left: 10px;}
+    margin-left: 20px;
+    font-size: 14px;
+  }
+  .flower1{
+    padding-left: 25px;
+    background: url("../img/flower1.png") no-repeat 0 10px;
+  }
+  .flower2{
+    padding-left: 20px;
+    background: url("../img/flower2.png") no-repeat 0 10px;
+  }
+  .flower3{
+    padding-left: 20px;
+    background: url("../img/flower3.png") no-repeat 0 15px;
+  }
+  .rank-info{
+    color:#ff3333;
+    font-size: 12px;
+  }
+}
+.center-rank-stud{
+  .center-rank-left;
+  height: 65px;
+  line-height: 65px;
+  background: #ccc;
+  .rank-number{
+    span{
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      line-height: 32px;
+      text-align: center;
+      font-size: 18px;
+      border-radius: 50%;
+      background: rgb(231,71,60);
+    }
+
+  }
+  div{
+    margin-left: 20px;
+  }
+  .rank-photo{
+    display: inline-block;
+    width: 40px;
+    height: 35px;
+  }
+  .rank-name{
+    span{
+      width: 170px;
+      height: 65px;
+      display: inline-block;
+      color: rgb(102,102,102);
+      font-size: 14px;
+      overflow: hidden;
+    }
+
+  }
+  .send-flower{
+    display: inline-block;
+    font-size: 14px;
+    .send-flower1{
+      display: inline-block;
+      padding-left: 25px;
+      background: url("../img/flower1.png") no-repeat 0 10px;
+    }
+    .send-flower2{
+      display: inline-block;
+      padding-left: 20px;
+      background: url("../img/flower2.png") no-repeat 0 10px;
+    }
+    .send-flower3{
+      display: inline-block;
+      padding-left: 20px;
+      background: url("../img/flower3.png") no-repeat 0 15px;
+    }
+  }
+}
