--- a/source/widget/courses/courses.less
+++ b/source/widget/courses/courses.less
@@ -67,7 +67,7 @@ ul,li{list-style: none;}
 	font-family: "SimSun";
 	border-top: 1px solid @borderColor;
 	width: 100%;
-	padding: 18px 10px;
+	padding: 13px 10px;
 	overflow: hidden;
 	a{
 		color: @dark333;
@@ -137,6 +137,7 @@ ul,li{list-style: none;}
 			margin: 8px 0;
 			span{
 				margin-right: 15px;
+				float: left;
 				strong{
 					color: #e74c3c;
 				}
@@ -325,7 +326,15 @@ ul,li{list-style: none;}
 	.course-detail{
 		p{
 			margin: 3px 0;
+		}
+		p.course-teacher{
 			height: 22px;
+		}
+		p.course-title{
+			.title-detail{
+				font-size: 12px;
+				font-family: "SimSun";
+			}
 		}
 		.course-teacher{
 			margin-top: 0;
