找老师页面card宽度固定 看直播页面滚动宽度固定

--- a/source/widget/find-teacher/find-teacher.less
+++ b/source/widget/find-teacher/find-teacher.less
@@ -14,7 +14,7 @@
 .find-teacher-rank-title span img{margin-left: 5px;}
 .find-teacher-intro{line-height: 0;font-size: 0;}
 .find-teacher-account{float:right;color: @c9;em{color: #e74c3c;font-style: normal;}margin-right: 15px;}
-.find-teacher-card{width: 25%;border-right: @borderf6;border-bottom: @borderf6;float: left;}
+.find-teacher-card{width: 234px;border-right: @borderf6;border-bottom: @borderf6;float: left;}
 .find-teacher-information{margin: @margin;height: 46px;border-bottom: @borderf6;}
 .find-teacher-name{margin-top: 14px;font-size: 26px;color: #333333;display: inline-block;}
 .find-teacher-v{margin-left: 12px;margin-bottom: -1px;vertical-align: bottom;}
