--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -49,7 +49,7 @@ em{font-style: normal;}
 .gold-store-clothing-card-stock,.gold-store-present-card-stock{color: #999999;display: block;}
 .gold-store-clothing-card-gold,.gold-store-present-card-gold{font-size: 16px;color: #e74c3c;display: block;margin: 25px 0;}
 /* 兑换遮罩 */
-.red-card-box,.clothing-box,.present-box{overflow: hidden;position: relative;margin: 42px 0;}
+.red-card-box,.clothing-box,.present-box{overflow: hidden;margin: 42px 0;}
 .red-card-box img,.clothing-box img,.present-box img{float: left;}
 .red-card-intro,.clothing-intro,.present-intro{float: left;margin-left: 42px;}
 .red-card-name,.clothing-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
@@ -63,12 +63,12 @@ em{font-style: normal;}
 .p2{height: 10px;width: 2px;background-color: #fff;position: absolute;top: 3px;left: 7px;}
 .red-card-num,.clothing-num,.present-num{display: inline-block;vertical-align: middle;width: 47px;height: 22px;border: 1px solid #eee;background-color: #fff;text-align: center;line-height: 22px;}
 .red-card-add,.clothing-add,.present-add{display: inline-block;margin: 0 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #3398cc;border-radius: 18px;position: relative;cursor: pointer;}
-.red-card-exchange,.clothing-exchange,.present-exchange{width: 132px;height: 42px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;position: absolute;bottom: 0;cursor: pointer;}
-
-
-
-
-
+.red-card-exchange,.clothing-exchange,.present-exchange{float:right;width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;}
+.present-address-box span{display: inline-block;width: 100%;color: #666;padding-bottom: 16px;border-bottom: 1px solid #eaeaea;}
+.present-address-box form{margin-top: 20px;}
+.present-address-box form label{height: 32px;line-height: 32px;color: #999;}
+.present-address-box form label input{margin: 0 11px 0 3px;}
+.present-address-box form label.present-address-focus{background-color: #ebf7fb;color: #333;}
 
 
 
