--- a/source/widget/gold/gold.less
+++ b/source/widget/gold/gold.less
@@ -49,21 +49,22 @@ em{font-style: normal;}
 .gold-store-clothing-card-stock,.gold-store-present-card-stock{color: #999999;display: block;}
 .gold-store-clothing-card-gold,.gold-store-present-card-gold{font-size: 16px;color: #e74c3c;display: block;margin: 25px 0;}
 /* 兑换遮罩 */
-.red-card-box,.clothing-box,.present-box{overflow: hidden;margin: 42px 0;}
-.red-card-box img,.clothing-box img,.present-box img{float: left;}
-.red-card-intro,.clothing-intro,.present-intro{float: left;margin-left: 42px;}
-.red-card-name,.clothing-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
-.red-card-intro-name,.clothing-intro-name,.present-intro-name{font-size: 12px;margin: 18px 0;}
-.red-card-intro-name span,.clothing-intro-name span ,.present-intro-name span{display: inline-block;vertical-align: bottom;}
-.red-card-intro-name span em,.clothing-intro-name span em,.present-intro-name span em{color: #e74c3c;}
-.red-card-intro-title,.clothing-intro-title,.present-intro-title{color: #999;}
-.red-card-intro-title span,.clothing-intro-title span,.present-intro-title span{margin-left: 12px;}
-.red-card-dec,.clothing-dec,.present-dec{display: inline-block;margin-right: 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #b5b5b5;border-radius: 18px;position: relative;cursor: pointer;}
+.red-card-box,.present-box{overflow: hidden;margin: 42px 0;position: relative;}
+.red-card-box img,.present-box img{float: left;}
+.red-card-intro,.present-intro{float: left;margin-left: 42px;}
+.red-card-name,.present-name{display: block;font-size: 16px;margin: 10px 0;}
+.red-card-intro-name,.present-intro-name{font-size: 12px;margin: 18px 0;}
+.red-card-intro-name span,.present-intro-name span{display: inline-block;vertical-align: bottom;}
+.red-card-intro-name span em,.present-intro-name span em{color: #e74c3c;}
+.red-card-intro-title,.present-intro-title{color: #999;}
+.red-card-intro-title span,.present-intro-title span{margin-left: 12px;}
+.red-card-dec,.present-dec{display: inline-block;margin-right: 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #b5b5b5;border-radius: 18px;position: relative;cursor: pointer;}
 .p1{height: 2px;width: 10px;background-color: #fff;position: absolute;top: 7px;left: 3px;}
 .p2{height: 10px;width: 2px;background-color: #fff;position: absolute;top: 3px;left: 7px;}
-.red-card-num,.clothing-num,.present-num{display: inline-block;vertical-align: middle;width: 47px;height: 22px;border: 1px solid #eee;background-color: #fff;text-align: center;line-height: 22px;}
-.red-card-add,.clothing-add,.present-add{display: inline-block;margin: 0 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #3398cc;border-radius: 18px;position: relative;cursor: pointer;}
-.red-card-exchange,.clothing-exchange,.present-exchange{float:right;width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;}
+.red-card-num,.present-num{display: inline-block;vertical-align: middle;width: 47px;height: 22px;border: 1px solid #eee;background-color: #fff;text-align: center;line-height: 22px;}
+.red-card-add,.present-add{display: inline-block;margin: 0 10px;vertical-align: middle;width: 16px;height: 16px;background-color: #3398cc;border-radius: 18px;position: relative;cursor: pointer;}
+.red-card-exchange{width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;position: absolute;bottom: 0}
+.present-exchange{float:right;width: 132px;height: 42px;margin-top:60px;background-color: #e74c3c;color: #fff;text-align: center;line-height: 42px;border-radius: 5px;cursor: pointer;}
 .present-address-box span{display: inline-block;width: 100%;color: #666;padding-bottom: 16px;border-bottom: 1px solid #eaeaea;}
 .present-address-box form{margin-top: 20px;}
 .present-address-box form label{height: 32px;line-height: 32px;color: #999;}
