--- a/source/widget/live/live.css
+++ b/source/widget/live/live.css
@@ -1,12 +1,12 @@
-.live-title{width: 100%;color: #999;font-size: 18px;position: relative;}
-.live-title p{display: inline-block;margin: 0;height: 1px;width: 100%;background-color: #eaeaea;position: absolute;top: 21px;left: 89px;}
+.live-title{width: 1198px;color: #999;font-size: 18px;position: relative;}
+.live-title p{display: inline-block;margin: 0;height: 1px;width: 1109px;background-color: #eaeaea;position: absolute;top: 21px;left: 89px;}
 .live-scroll-btn-container{position: absolute;right: 0;top: 8px;list-style: none;}
 .live-scroll-btn-container li{float: left;margin-left: 5px;width: 10px;height: 10px;border: 1px solid #e5e7ec;border-radius: 10px;}
 .live-scroll-btn-on{background-color: #3bafda}
-.live-scroll-box{overflow: hidden;width: 100%;}
+.live-scroll-box{overflow: hidden;width: 1274px;}
 .live-scroll-box-container{position: absolute;width: 100%;}
-.live-scroll-container{position: relative;margin-bottom: 30px;height: 291px;overflow: hidden}
-.live-card{float: left;width: 25%;}
+.live-scroll-container{position: relative;width: 1198px;margin-bottom: 30px;height: 291px;overflow: hidden}
+.live-card{float: left;width: 271px;margin-right: 38px;}
 .live-course-box{position: relative;display: inline-block;}
 .live-teacher-photo{margin-top: 11px;}
 .live-course-title{height: 30px;width: 245px;position: absolute;bottom: 0;background-color: #000;opacity: 0.5;}
