--- a/source/widget/fresh/fresh.less
+++ b/source/widget/fresh/fresh.less
@@ -627,6 +627,14 @@
     }
 
   }
+
+  /** 
+   * 推荐新鲜事鼠标滑过整条信息的背景色改变
+   */
+  &.fresh-hover-style{
+     background: #f1f2f6;
+     cursor: pointer;
+  }
   /** 
    * 热门新鲜事Style
    */
