--- a/source/widget/courseStudycenter/courseStudycenter.less
+++ b/source/widget/courseStudycenter/courseStudycenter.less
@@ -2,6 +2,9 @@
 @borderColor: #eaeaea;
 @fontSize: 12px;
 @dark333: #333;
+body{
+	background: #f1f2f6;
+}
 .border-radius(@amount: 5px){
 	-moz-border-radius: @amount;
 	-webkit-border-radius: @amount;
@@ -80,7 +83,7 @@
 	text-align: center;
 	display: inline-block;
 	position: absolute;
-	right: -25px;
+	right: 0px;
 	color: #fff;
 }
 .label-delay{
@@ -91,40 +94,47 @@
 	background: #37bc9b;
 	top: 105px;
 }
+.courseList-wrap{
+	padding-right: 25px;
+	position: relative;
+}
 .courseList {
 	table,tr,th,thead{margin: 0;padding: 0;}
 	ul,li,p{margin: 0;list-style: none;padding: 0}
-	background: #fff;
-	height: 200px;
+	background: #fff none repeat scroll 0 0;
 	border-radius: 4px;
+	display: block;
 	font-family: "SimSun";
-	padding: 15px 5px 15px 15px;
+	height: auto;
 	margin-bottom: 20px;
-	position: relative;
+	overflow: hidden;
+	padding: 15px 5px 15px 15px;
 	.study-report {
 		float: left;
-		.report-inner{
-			width: 160px;
-			height: 170px;
-			border-right: 1px solid @borderColor;
-			padding-right: 17px;
-			.progress-show{
-				text-align: center;
-				margin-bottom: 5px;
-			}
-			p{
-				text-align: left;
-				font-size: 12px;
-				color: #999999;
-				span{
-					color: @red;
-				}
+		width: 160px;
+		height: 170px;
+		border-right: 1px solid @borderColor;
+		padding-right: 17px;
+		.progress-show{
+			text-align: center;
+			margin-bottom: 5px;
+		}
+		p{
+			text-align: left;
+			font-size: 12px;
+			color: #999999;
+			span{
+				color: @red;
 			}
 		}
 	}
 	.courseList-body{
-		float: left;
-		padding: 0 20px;
+		display: block;
+		overflow: hidden;
+		padding: 0 10px;
+		.course-center{
+			min-width: 517px;
+		}
 		.course-title{
 			font-size: 16px;
 			line-height: 18px;
@@ -186,17 +196,54 @@
 				}
 			}
 		}
+		.more-service{
+			margin-right: 10px;
+			h4{
+				color: #333333;
+				font-size: 12px;
+				font-weight: normal;
+				width: 62px;
+				cursor: pointer;
+				font-family: "SimSun";
+				margin-top: 0;
+			}
+			.gray-arrow{
+				background: url("img/gray-arrow.png") no-repeat right center;
+			}
+			.blue-arrow{
+				background: url("img/blue-arrow.png") no-repeat right center;
+			}
+			.more-list{
+				padding-top: 5px;
+				border: 1px solid #f5f5f5;
+				background: #fcfcfc;
+				width: 62px;
+				height: 92px;
+				color: #333;
+				font-size: 12px;
+				line-height: 28px;
+				text-align: center;
+				display: none;
+			}
+		}
+		.show{
+			.more-list{
+				display: block;
+			}
+		}
 	}
 	.courseList-teacher{
 		height: 170px;
 		border-left: 1px solid @borderColor;
 		width: 181px;
-		float: right;
+		float: left;
 		padding: 5px 5px;
 		position: relative;
 		.teacher-main{
 			padding: 12px;
 			overflow: hidden;
+			float: left;
+			width: 160px;
 			.avatar-photo{
 				float: left;
 				margin-right: 10px;
@@ -243,7 +290,7 @@
 			}
 			.avatar-roll{
 				position: absolute;
-				right: 44px;
+				right: 36px;
 				bottom: -2px;
 				a{
 					outline: none;
@@ -271,42 +318,6 @@
 						background: url('img/icon_chevron_right_none.png') no-repeat 0 0;
 					}
 				}
-			}
-		}
-		.more-service{
-			position: absolute;
-			left: -80px;
-			top: -3px;
-			h4{
-				color: #333333;
-				font-size: 12px;
-				font-weight: normal;
-				width: 62px;
-				cursor: pointer;
-				font-family: "SimSun";
-			}
-			.gray-arrow{
-				background: url("img/gray-arrow.png") no-repeat right center;
-			}
-			.blue-arrow{
-				background: url("img/blue-arrow.png") no-repeat right center;
-			}
-			.more-list{
-				padding-top: 5px;
-				border: 1px solid #f5f5f5;
-				background: #fcfcfc;
-				width: 62px;
-				height: 92px;
-				color: #333;
-				font-size: 12px;
-				line-height: 28px;
-				text-align: center;
-				display: none;
-			}
-		}
-		.show{
-			.more-list{
-				display: block;
 			}
 		}
 
